<?xml version="1.0"?>
<package>
  <name>kcl_grasp_msgs</name>
  <version>0.0.1</version>
  <description>Messages, services and actions used by sr_grasp.</description>
  <license>BSD</license>
  <url type="repository">https://github.com/Kevin315/Contact_location</url>

  <maintainer email="teng.sun@kcl.ac.uk">King's HaMMeR Lab</maintainer>
  <author email="teng.sun@kcl.ac.uk">Teng Sun</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>shape_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
